Fix for bossbar bug.